- 0.9.0.1
    * Allow compilation with older bytestring versions
    * Bump text dependency

- 0.9.0.0
    * Bump various dependencies
    * Remove io-streams dependency
    * New close mechanism
    * More flexible API interface

- 0.8.2.6
    * Bump QuickCheck dependency

- 0.8.2.5
    * Bump attoparsec dependency

- 0.8.2.4
    * Bump entropy dependency

- 0.8.2.3
    * Bump mtl dependency

- 0.8.2.2
    * Bump network dependency

- 0.8.2.1
    * Add benchmark with many open connections
    * Update example to use gender-neutral language

- 0.8.2.0
    * Fix possible leaking of client sockets when connection times out